<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="titlebar"
            type="String" />

        <variable
            name="addContactVM"
            type="com.ryandzhunter.contact.addcontact.AddContactViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tool:showIn="@layout/activity_add_contact">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="48px"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_contact_call_first_name_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:id="@+id/add_contact_first_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_call_first_name_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
                        android:text="@={addContactVM.firstName}"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/add_contact_first_name_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="8dp"
                        android:text="@string/error_first_name"
                        android:visibility="@{addContactVM.isValidFirstName ? View.GONE : View.VISIBLE}"
                        android:textColor="@color/errorTextColor" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_contact_last_name_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:id="@+id/add_contact_last_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_last_name_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
                        android:text="@={addContactVM.lastName}"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/add_contact_last_name_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="8dp"
                        android:text="@string/error_last_name"
                        android:visibility="@{addContactVM.isValidLastName ? View.GONE : View.VISIBLE}"
                        android:textColor="@color/errorTextColor" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_contact_phone_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_call_grey" />

                <LinearLayout
                    android:id="@+id/add_contact_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_phone_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
                        android:text="@={addContactVM.phoneNumber}"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/add_contact_phone_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8px"
                        android:paddingLeft="5dp"
                        android:text="@string/error_phone_number"
                        android:visibility="@{addContactVM.isValidPhoneNumber ? View.GONE : View.VISIBLE}"
                        android:textColor="@color/errorTextColor" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_contact_email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_email" />

                <LinearLayout
                    android:id="@+id/add_contact_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_email_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
                        android:text="@={addContactVM.email}"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/add_contact_email_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8px"
                        android:paddingLeft="5dp"
                        android:text="@string/error_email_format"
                        android:visibility="@{addContactVM.isValidEmail? View.GONE : View.VISIBLE}"
                        android:textColor="@color/errorTextColor" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</layout>
    