...
        <include
            android:id="@+id/add_contact_toolbar"
            layout="@layout/toolbar_add_contact"
            bind:addContactVM="@{addContactVM}" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                        android:paddingLeft="100dp"
                        android:paddingRight="100dp"
                        android:paddingTop="20dp"
                        android:src="@drawable/ic_profile_large" />

                    <ImageButton
                        android:id="@+id/add_contact_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:backgroundTint="@android:color/transparent"
                        android:onClick="@{()-> addContactVM.onPhotoClick()}"
...
